<resources>
    <string name="app_name">TetrisRPG</string>
    <string name="tetrisrpg">TetrisRPG</string>
    <string name="start">START</string>
    <string name="setting">SETTING</string>
    <string name="score">SCORE</string>
    <string name="textview">TextView</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="rotaion">Rotaion</string>
    <string name="hard_drop">HARD DROP</string>
    <string name="hold">HOLD</string>
    <string name="defeated">Defeated</string>
    <string name="title_activity_score">ScoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_name">Name</string>
    <string name="str_score">Score</string>
</resources>